# artie

./: .gitignore  Artie.cc  CMakeLists.txt  GNUmakefile  README  README.md  RUN.sh  dump.mac  envHadronic.sh  plotHisto.C  run01.mac  run_argon.mac  run_argon_fill.mac  run_ideal.mac  run_long.mac  run_short.mac  run_vacuum.mac  run_vacuum_fill.mac  setup_geant.sh  vis.mac
analysis/: analysis.py
data/: Ar-40-tot.txt  ArtieBeam.root  Winters_data.txt  xYash.root
include/: Analysis.hh  Detector.hh  DetectorConstruction.hh  EventAction.hh  NeutronHPMessenger.hh  NeutronHPphysics.hh  PhysicsList.hh  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  SteppingAction.hh  TrackingAction.hh
macro/: ArtieAnalysis.C  ArtieStyle.C  ArtieStyle.h  ArtieTree.C  ArtieTree.h  Artie_ana.C  Artie_ana2.C  Artie_ana4.C  README  plotHisto.C
pandas/: HARVEST.csh  ROOT_FREE.txt  artie.py  convert_to_feather.py  plot_ideal.py  plot_tof.py  plot_xsec.py
pyroot/: plot_analysis.py  plot_root.py  plot_tof.py
setup/: dunegpvm.sh  envHadronic.sh  miniconda-dunegpvm.sh  yash.sh
src/: ActionInitialization.cc  Analysis.cc  Detector.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  NeutronHPMessenger.cc  NeutronHPphysics.cc  PhysicsList.cc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc
